--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,18 @@
 body {
   font-family: "Raleway", sans-serif;
 }
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+p.temperature {
+  display: inline-block;
+  font-size: 2rem;
+  font-weight: 400;
+}
+.superscript {
+  display: inline-block;
+  font-size: 1rem;
+  padding: 0 10px 20px 0;
+}
