--- a/src/style.css
+++ b/src/style.css
@@ -2,19 +2,23 @@
 
 body {
   font-family: "Raleway", sans-serif;
-  background: #5f72cf;
-  background: -webkit-linear-gradient(to top, #5f72cf 0%, #22036b 100%);
-  background: -moz-linear-gradient(to top, #5f72cf 0%, #22036b 100%);
-  background: linear-gradient(to top, #5f72cf 0%, #22036b 100%);
+  color: #000000;
+  background: #49579e;
+  background: -webkit-linear-gradient(to top, #49579e 0%, #17024a 100%);
+  background: -moz-linear-gradient(to top, #49579e 0%, #17024a 100%);
+  background: linear-gradient(to top, #49579e 0%, #17024a 100%);
+}
+h1 {
+  margin: 20px auto 10px auto;
 }
 .container {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgb(253, 250, 250);
   max-width: 85%;
   border: 1px solid #ffffff;
   border-radius: 8px;
   margin: 20px auto;
   padding: 20px 20px;
-  opacity: 0.5;
+  opacity: 0.25;
 }
 ul {
   list-style: none;
@@ -36,5 +40,6 @@ p.temperature {
 footer {
   max-width: 75%;
   margin: 0 auto;
+  text-align: center;
   color: #ffffff;
 }
