--- a/src/style.css
+++ b/src/style.css
@@ -2,23 +2,32 @@
 
 body {
   font-family: "Raleway", sans-serif;
-  color: #000000;
+  color: #ffffff;
   background: #49579e;
-  background: -webkit-linear-gradient(to top, #49579e 0%, #17024a 100%);
-  background: -moz-linear-gradient(to top, #49579e 0%, #17024a 100%);
-  background: linear-gradient(to top, #49579e 0%, #17024a 100%);
+  background: -webkit-linear-gradient(
+    to top,
+    #49579e 0%,
+    #15076b 42%,
+    #17024a 76%
+  );
+  background: -moz-linear-gradient(
+    to top,
+    #49579e 0%,
+    #15076b 42%,
+    #17024a 76%
+  );
+  background: linear-gradient(to top, #49579e 0%, #15076b 42%, #17024a 76%);
 }
 h1 {
   margin: 20px auto 10px auto;
 }
 .container {
-  background-color: rgb(253, 250, 250);
+  background: rgba(21, 7, 107, 0.25);
   max-width: 85%;
   border: 1px solid #ffffff;
   border-radius: 8px;
   margin: 20px auto;
   padding: 20px 20px;
-  opacity: 0.25;
 }
 ul {
   list-style: none;
