--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
+
 body {
   font-family: "Raleway", sans-serif;
   color: #ffffff;
@@ -67,9 +69,12 @@ a {
   top: -1em;
 }
 
-#cond-icon {
-  position: relative;
-  top: -1.25em;
+.cond-icon {
+  display: inline-block;
+  font-size: 3.5rem;
+  margin-bottom: 0;
+  margin-right: 10px;
+  line-height: 100px;
 }
 .button {
   border-radius: 4px;
