--- a/src/style.css
+++ b/src/style.css
@@ -102,7 +102,7 @@ a {
 }
 .forecast-card {
   text-align: center;
-  margin: 10px auto 20px auto;
+  margin: 10px 10px 20px 10px;
   border: 1px dotted #ffffff;
   border-radius: 10px;
   padding: 10px 10px 10px 10px;
