--- a/src/style.css
+++ b/src/style.css
@@ -54,6 +54,54 @@ a {
   color: #a9cde0;
   font-weight: 500;
 }
+
+header {
+  display: inline-flex;
+  align-items: stretch;
+  align-content: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  height: 40px;
+  min-width: 60%;
+  max-width: 85%;
+}
+
+.button {
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 1px 5px 1px 5px;
+  height: 38px;
+  border: 1px solid #000000;
+  transition: all 200ms ease-in-out;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+.button:hover {
+  color: #ffffff;
+  background-color: rgba(0, 0, 0, 0.8);
+  border: 1px solid #ffffff;
+}
+.locate-btn {
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 1px 10px 1px 10px;
+  height: 38px;
+  border: 1px solid #ffffff;
+  background-color: rgba(53, 15, 124, 0.8);
+  color: #ffffff;
+  transition: all 200ms ease-in-out;
+}
+.locate-btn:hover {
+  background-color: #a9cde0;
+  color: rgba(53, 15, 124, 0.8);
+}
+.input-text {
+  border-radius: 4px;
+  border: 1px solid #000000;
+  height: 38px;
+  padding: 1px 3px 1px 3px;
+}
 .bold {
   font-weight: 400;
 }
@@ -89,13 +137,7 @@ a {
   margin-right: 10px;
   line-height: 100px;
 }
-.button {
-  border-radius: 4px;
-  padding: 0 5px 0 5px;
-}
-.input-text {
-  border-radius: 4px;
-}
+
 .inactive {
   color: #ffffff;
   text-decoration: none;
@@ -110,6 +152,10 @@ a {
   text-align: center;
   max-width: 45%;
   border-radius: 15px;
+  transition: all 200ms ease-in-out;
+}
+.forecast-card:hover {
+  background-color: rgba(255, 255, 255, 0.4);
 }
 .forecast-icon {
   font-size: 1.5em;
